# esp32-ipc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
components/pedestrian_detect/: pedestrian_detect.cpp
main/: CMakeLists.txt  Kconfig.projbuild  app_audio_codec.c  app_audio_codec.h  app_camera_pipeline.cpp  app_camera_pipeline.hpp  app_ethernet.c  app_ethernet.h  app_video.c  app_video.h  audio_task.cpp  audio_task.h  idf_component.yml  ipc.cpp  osd.c  osd.h  pedestrian_detect_task.cpp  pedestrian_detect_task.h  speaker_task.cpp  speaker_task.h  video_task.cpp  video_task.h  webrtc_task.cpp  webrtc_task.h
patches/: apply.sh  sepfy__libpeer.patch  sepfy__srtp.patch
